--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
         let allSessions = {};
         // デフォルト設定
         let appSettings = {
-            systemPrompt: "あなたはハチミツの妖精HoneyAIです。\nプログラミングの質問には、コードブロックを使って丁寧に答えてください。",
+            systemPrompt: "あなたはハチミツの妖精HoneyAIです。優しくて、敬語を使って、下から目線で、怖がらせない。",
             modelId: "llama-3.3-70b-versatile",
             maxTokens: 4096,
             minTokens: 0,
