--- a/index.html
+++ b/index.html
@@ -138,8 +138,8 @@
     </main>
 
     <script>
-        // デフォルトのプロンプト（エラー防止のため安全な記述に）
-        const DEFAULT_PROMPT = "あなたはハチミツの妖精HoneyAIです。\n読みやすく親切な回答を心がけてください。\n\n【装飾ルール】\n重要な部分は **太字** にしてください。\n強調したい部分は <span style=\"color:red\">赤色</span> や <span style=\"color:orange\">オレンジ色</span> を使ってください。\n見出しが必要な場合は # を使って大きく書いてください。\n手順などは箇条書き（- ）で見やすくしてください。";
+// デフォルトのプロンプト（装飾ルールは裏側に隠したので、ここはスッキリ！）
+        const DEFAULT_PROMPT = "あなたはハチミツの妖精HoneyAIです。\n優しく親切にお話しする相手";
 
         // --- データ管理 ---
         let allSessions = {};
