--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HoneyAI 🍯</title>
+    <title>HoneyAI Pro 🍯</title>
     <link href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@400;700&display=swap" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/dompurify/3.0.8/purify.min.js"></script>
@@ -13,7 +13,7 @@
         .sidebar { width: 260px; background: var(--sidebar-bg); border-right: 2px solid #FFE082; display: flex; flex-direction: column; padding: 15px; flex-shrink: 0; transition: 0.3s; }
         .new-chat-btn { background: var(--honey-gold); border: none; padding: 12px; border-radius: 20px; font-weight: bold; cursor: pointer; margin-bottom: 20px; box-shadow: 0 2px 5px rgba(0,0,0,0.1); width: 100%; }
         .history-list { flex-grow: 1; overflow-y: auto; }
-        .history-item { padding: 12px; margin-bottom: 8px; border-radius: 12px; cursor: pointer; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; font-size: 0.85rem; position: relative; background: rgba(255,255,255,0.5); border: 1px solid transparent; padding-right: 50px; }
+        .history-item { padding: 12px; margin-bottom: 8px; border-radius: 12px; cursor: pointer; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; font-size: 0.85rem; position: relative; background: rgba(255,255,255,0.5); border: 1px solid transparent; }
         .history-item.active { background: #FFE082; font-weight: bold; border-color: var(--honey-dark); }
         .history-btn { position: absolute; top: 50%; transform: translateY(-50%); background: none; border: none; color: #888; cursor: pointer; display: none; font-size: 1rem; }
         .history-item:hover .history-btn { display: block; }
@@ -27,13 +27,13 @@
         .user-msg { align-items: flex-end; }
         .user-msg .bubble { background: var(--honey-accent); color: white; border-bottom-right-radius: 4px; }
         .ai-msg { align-items: flex-start; }
-        .ai-msg .bubble { background: var(--honey-light); border: 1px solid #FFE082; border-bottom-left-radius: 4px; color: #333; }
-        .bubble h1, .bubble h2 { border-bottom: 2px dashed var(--honey-gold); }
+        .ai-msg .bubble { background: var(--honey-light); border: 1px solid #FFE082; border-bottom-left-radius: 4px; color: #333; width: 100%; }
+        .bubble h1, .bubble h2 { border-bottom: 2px dashed var(--honey-gold); padding-bottom: 5px; }
         .bubble strong { color: #d35400; background: rgba(255,215,0,0.2); padding: 0 4px; border-radius: 4px; }
         pre { background: var(--code-bg); color: #f8f8f2; padding: 15px; border-radius: 8px; overflow-x: auto; font-family: monospace; position: relative; }
         .copy-btn { position: absolute; right: 5px; top: 5px; background: #666; color: white; border: none; padding: 2px 8px; border-radius: 4px; cursor: pointer; font-size: 0.7rem; }
-        .input-area { padding: 15px; border-top: 1px solid #eee; display: flex; gap: 10px; }
-        #user-input { flex-grow: 1; padding: 12px 20px; border: 2px solid #ddd; border-radius: 25px; outline: none; }
+        .input-area { padding: 15px; border-top: 1px solid #eee; display: flex; gap: 10px; background: white; }
+        #user-input { flex-grow: 1; padding: 12px 20px; border: 2px solid #ddd; border-radius: 25px; outline: none; font-size: 1rem; }
         .send-btn { background: var(--honey-gold); border: none; width: 45px; height: 45px; border-radius: 50%; cursor: pointer; color: white; font-size: 1.2rem; }
         #settings-panel { display: none; position: absolute; top: 60px; right: 20px; background: white; border: 3px solid var(--honey-gold); padding: 20px; border-radius: 15px; z-index: 100; width: 320px; box-shadow: 0 8px 20px rgba(0,0,0,0.15); max-height: 80vh; overflow-y: auto; }
         .setting-item { margin-bottom: 15px; }
@@ -54,23 +54,23 @@
         </header>
         <div id="settings-panel">
             <div class="setting-item">
-                <label>👤 あなたの職業</label>
+                <label>👤 職業・立場</label>
                 <input type="text" id="user-profession" placeholder="例: 中学生、エンジニア...">
             </div>
             <div class="setting-item">
-                <label>📈 最大文字数 <span id="val-max" style="float:right; color:orange;">8192</span></label>
+                <label>📈 文字数目安</label>
                 <input type="range" id="max-tokens" min="1024" max="32768" step="1024" value="8192" oninput="document.getElementById('val-max').innerText = this.value">
+                <span id="val-max" style="font-size:0.8rem; color:orange;">8192</span>
             </div>
             <div class="setting-item">
                 <label>性格設定</label>
-                <textarea id="system-prompt" rows="4">あなたはハチミツの妖精HoneyAIです。語尾は「〜だみつ」。</textarea>
+                <textarea id="system-prompt" rows="4">優しく、ハチミツのようにとろけるような会話をしてください。</textarea>
             </div>
             <div class="setting-item" style="background:#FFF8E1; padding:10px; border-radius:10px;">
-                <label>🔑 自分のAPIキー (任意)</label>
-                <input type="password" id="user-api-key" placeholder="gsk_... または SambaNovaのキー">
+                <label>🔑 個別APIキー (任意)</label>
+                <input type="password" id="user-api-key" placeholder="gsk_... 等">
             </div>
-            <button onclick="saveSettings()" style="width:100%; background:var(--honey-gold); border:none; padding:12px; border-radius:12px; cursor:pointer; font-weight:bold;">💾 設定を保存</button>
-            <button onclick="toggleSettings()" style="width:100%; margin-top:5px; background:#eee; border:none; padding:8px; border-radius:12px; cursor:pointer;">閉じる</button>
+            <button onclick="saveSettings()" style="width:100%; background:var(--honey-gold); border:none; padding:12px; border-radius:12px; cursor:pointer; font-weight:bold;">保存</button>
         </div>
         <div id="chat-box"></div>
         <div class="input-area">
@@ -79,20 +79,17 @@
         </div>
     </main>
     <script>
-        let allSessions = {};
-        let appSettings = { systemPrompt: "あなたはハチミツの妖精です。", maxTokens: 8192, userProfession: "", userApiKey: "" };
-        let currentSessionId = null;
-        const chatBox = document.getElementById('chat-box');
-        const userInput = document.getElementById('user-input');
+        let allSessions = {}, currentSessionId = null;
+        let appSettings = { systemPrompt: "ハチミツの妖精として親切に話してください。", maxTokens: 8192, userProfession: "", userApiKey: "" };
+        const chatBox = document.getElementById('chat-box'), userInput = document.getElementById('user-input');
 
         window.onload = function() {
             try {
-                const s = localStorage.getItem('honeyai_sessions'); if(s) allSessions = JSON.parse(s);
-                const st = localStorage.getItem('honeyai_settings'); if(st) appSettings = { ...appSettings, ...JSON.parse(st) };
+                const s = localStorage.getItem('honeyai_sessions'), st = localStorage.getItem('honeyai_settings');
+                if(s) allSessions = JSON.parse(s); if(st) appSettings = { ...appSettings, ...JSON.parse(st) };
             } catch(e){}
             document.getElementById('system-prompt').value = appSettings.systemPrompt;
             document.getElementById('max-tokens').value = appSettings.maxTokens;
-            document.getElementById('val-max').innerText = appSettings.maxTokens;
             document.getElementById('user-profession').value = appSettings.userProfession;
             document.getElementById('user-api-key').value = appSettings.userApiKey;
             renderHistoryList(); startNewChat();
@@ -112,9 +109,7 @@
             saveData(); userInput.value = '';
 
             const bubble = appendMessage('assistant', '🍯 ...');
-            const container = bubble;
             let fullReply = "";
-
             let finalPrompt = appSettings.systemPrompt;
             if(appSettings.userProfession) finalPrompt += `\nユーザーの職業は「${appSettings.userProfession}」です。`;
 
@@ -124,23 +119,22 @@
                     headers: { 'Content-Type': 'application/json' },
                     body: JSON.stringify({ messages: allSessions[currentSessionId].messages, systemPrompt: finalPrompt, maxTokens: appSettings.maxTokens, userApiKey: appSettings.userApiKey })
                 });
-                if (!response.ok) throw new Error('API Error');
-                const reader = response.body.getReader();
-                const decoder = new TextDecoder();
+                if (!response.ok) { const err = await response.json(); throw new Error(err.error || 'API Error'); }
+                const reader = response.body.getReader(), decoder = new TextDecoder();
                 while (true) {
                     const { done, value } = await reader.read(); if (done) break;
                     fullReply += decoder.decode(value, { stream: true });
-                    container.innerHTML = formatContent(fullReply);
+                    bubble.innerHTML = formatContent(fullReply);
                     chatBox.scrollTop = chatBox.scrollHeight;
                 }
                 allSessions[currentSessionId].messages.push({ role: "assistant", content: fullReply });
                 saveData();
-            } catch (e) { container.innerText = "エラーだみつ: " + e.message; }
+                if(allSessions[currentSessionId].messages.length === 2) generateAutoTitle(text, currentSessionId);
+            } catch (e) { bubble.innerHTML = `<span style="color:red;">${e.message}</span>`; }
         }
 
         function formatContent(content) {
-            if (!content) return "";
-            let text = content.replace(/<think>([\s\S]*?)<\/think>/, (m, t) => `<details><summary>思考プロセス</summary><div style="font-style:italic; color:#8D6E63; padding:8px;">${t.replace(/\n/g, '<br>')}</div></details>`);
+            let text = content.replace(/<think>([\s\S]*?)<\/think>/, (m, t) => `<details open><summary>思考プロセス</summary><div style="font-style:italic; color:#8D6E63; padding:8px;">${t.replace(/\n/g, '<br>')}</div></details>`);
             let html = marked.parse(text);
             html = html.replace(/<pre><code/g, '<div style="position:relative"><button class="copy-btn" onclick="copyCode(this)">Copy</button><pre><code');
             return DOMPurify.sanitize(html, { ADD_TAGS: ['u', 'span'], ADD_ATTR: ['style'] });
@@ -154,13 +148,23 @@
             return div.querySelector('.bubble');
         }
 
+        async function generateAutoTitle(text, id) {
+            try {
+                const res = await fetch('/api/chat', { method: 'POST', body: JSON.stringify({ messages: [{role:"user", content:`以下を15字以内で要約してタイトルのみ出力せよ:${text}`}], maxTokens: 50 }) });
+                const reader = res.body.getReader(), decoder = new TextDecoder();
+                let title = "";
+                while(true) { const {done, value} = await reader.read(); if(done) break; title += decoder.decode(value); }
+                if(title && allSessions[id]) { allSessions[id].title = title.trim().replace(/["「」]/g, ""); saveData(); renderHistoryList(); }
+            } catch(e){}
+        }
+
         function saveSettings() {
             appSettings.systemPrompt = document.getElementById('system-prompt').value;
             appSettings.maxTokens = document.getElementById('max-tokens').value;
             appSettings.userProfession = document.getElementById('user-profession').value;
             appSettings.userApiKey = document.getElementById('user-api-key').value.trim();
             localStorage.setItem('honeyai_settings', JSON.stringify(appSettings));
-            alert('保存したみつ！'); toggleSettings();
+            alert('保存完了だみつ！'); toggleSettings();
         }
 
         function saveData() { localStorage.setItem('honeyai_sessions', JSON.stringify(allSessions)); }
